fix[Link T-632]: fixed issue when DataTable hasn't got any filters or actions but the header is still visible

--- a/src/components/dataTable/inner/columnHeaders.module.scss
+++ b/src/components/dataTable/inner/columnHeaders.module.scss
@@ -42,9 +42,6 @@
 }
 
 .Cell {
-
-  //border-top-left-radius: 6px;
-  //border-top-right-radius: 6px;
   color: var(--dataTableHeadingCellTextColor);
 }
 
@@ -106,5 +103,17 @@
 
   &:hover {
     background-color: transparent;
+  }
+}
+
+.WithoutHeading {
+  .Cell {
+    &:first-of-type {
+      border-top-left-radius: 6px;
+    }
+
+    &:last-of-type {
+      border-top-right-radius: 6px;
+    }
   }
 }
